--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,19 @@
   background-color: whitesmoke;
 }
 
+.hero {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 5px solid #fe97af;
+  border-top: 5px solid #fe97af;
+}
+
+.hero img {
+  max-width: 100%;
+  height: auto;
+}
+
 .content {
   max-width: 100%;
   margin-top: 10px;
