--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ body {
 .footer {
   padding: 20px;
   display: flex;
-  max-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
   border-top: 2px solid #fe97af;
   color: #F7F6F6;
