--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,15 @@
   font-style: normal;
 }
 
-* {
+body {
   margin: 0;
   font-family: "Lato";
+  background-image: url('./images/4951061_2579646.jpg');
+  background-size: cover;
+}
+
+.content {
+  background-color: whitesmoke; /* Set the background of the content area to white */
 }
 
 .App {
@@ -37,13 +43,14 @@
   display: flex;
   align-items: center;
   width: 100%;
+  max-height: 75px;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
   color: #333;
   position: fixed;
-  background: url('./images/4951061_2579646.jpg'); 
-  background-size: cover;
+  background-color: whitesmoke;
+  background-image: none;
   z-index: 1000;
   border-bottom: 5px solid #fe97af;
   border-top: 5px solid #fe97af;
@@ -54,7 +61,7 @@
   font-family: 'stormfaze';
   font-size: 50px;
   text-decoration: none; 
-  text-shadow: 2px 2px 4px rgba(254, 151, 175, 2);
+  text-shadow: 2px 2px 4px #fe97af;
 }
 
 .navbar h1 a.navbar-logo {
@@ -90,6 +97,7 @@
   display: flex;
   align-items: center;
   margin-left: auto;
+  margin-right: 20px;
   justify-content: flex-end;
 }
 
@@ -119,7 +127,7 @@
 }
 
 .content {
-  max-width: 100%;
+  max-width: 1100;
   margin-top: 1px;
   padding: 1px;
 }
@@ -138,14 +146,13 @@ body {
   border-top: 2px solid #fe97af;
   color: #F7F6F6;
   justify-content: center;
-  background: url('./images/4951061_2579646.jpg');
+  background-color: whitesmoke;
   background-size: cover;
   margin-top: 20px;
   z-index: 1;
   color: #333;
   font-family: 'stormfaze';
 }
-
 
 @media screen and (max-width: 600px) {
   .navbar {
