--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,10 @@ body {
 }
 
 .content {
-  background-color: whitesmoke; /* Set the background of the content area to white */
+  background-color: whitesmoke;
+  max-width: 1100;
+  margin-top: 1px;
+  padding: 1px; 
 }
 
 .App {
@@ -35,7 +38,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 0;
-  height: 100vh;
+  height: 100%vh;
 }
 
 .navbar {
@@ -114,6 +117,7 @@ body {
   margin-left: auto;
   margin-right: 20px;
   justify-content: flex-end;
+  font-size: 20px;
 }
 
 .navbar a {
@@ -136,14 +140,6 @@ body {
   border-bottom: 5px solid #fe97af;
 }
 
-
-
-.content {
-  max-width: 1100;
-  margin-top: 1px;
-  padding: 1px;
-}
-
 body {
   margin: 0;
   padding-top: 100px;
@@ -155,22 +151,18 @@ body {
   display: flex;
   max-width: 100%;
   margin: 0 auto;
-  border-top: 2px solid #fe97af;
-  color: #F7F6F6;
+  border-top: 5px solid #fe97af;
   justify-content: center;
   background-color: whitesmoke;
-  background-size: cover;
   margin-top: 20px;
-  z-index: 1;
   color: #333;
   font-family: 'stormfaze';
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .navbar {
     flex-direction: column; 
     align-items: center; 
-    max-height: auto;
   }
 
   .navbar h1 {
@@ -178,9 +170,14 @@ body {
     margin-bottom: 10px; 
   }
 
+  h1 {
+    font-size: 20px;
+  }
   .navbar .links {
+    display: flex;
     margin-left: 0;
     justify-content: center; 
+    align-items: center;
   }
 
   .navbar a {
