added newsletter signup form

--- a/src/index.css
+++ b/src/index.css
@@ -134,11 +134,45 @@ body {
   justify-content: center;
   border-bottom: 5px solid #fe97af;
 }
+.newsletter-container{
+border-bottom: 5px solid #fe97af;
+padding-bottom: 10px;
+}
+
+#email {
+  width: 300px;
+  padding: 5px; 
+  font-size: 16px;
+  border-color: #80dad3;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+}
+
+#email::placeholder {
+  font-style: italic;
+  text-align: center;
+}
 
 body {
   margin: 0;
   padding-top: 100px;
   max-width: 100%;
+}
+
+button {
+  font-family: Oxygen, sans-serif;
+  font-size: 14px;
+  color: #000000;
+  background-color: #80dad3;
+  padding: 5px 10px;
+  border: 0;
+  box-shadow: 2px 2px 4px #73c4be;
+}
+  
+  button:hover {
+  color: #000000;
+  background-color: #73c4be;
 }
 
 .footer {
